--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,28 @@
 .Rhistory
 .RData
 .Ruserdata
+
+# RStudio files
+.Rproj.user/
+.Rhistory
+.Rapp.history
+
+# R data files
+*.RData
+*.rds
+
+# R build files
+*.Rbuildignore
+
+# Temporary files
+*.log
+*.tmp
+
+# Data files (if not needed)
+data/
+
+# Compiled code
+*.o
+*.so
+*.dll
+*.exe
